<resources>
    <string name="app_name">Quick Watchfaces</string>
    <string name="action_import">Import</string>
    <string name="action_delete">Delete</string>
    <string name="reboot">Reboot now</string>
    <string name="apply">Apply</string>
    <string name="later">Reboot later</string>
    <string name="apply_theme">Apply theme</string>

    <string name="author">Author:</string>
    <string name="description">Description:</string>
    <string name="active_theme">Active Theme</string>
    <string name="no_watchfaces">No Watchfaces installed\nUse the import button to import new watchfaces</string>
    <string name="err_no_xml">Zip file does not contain a clock.xml</string>
    <string name="err_invalid_xml">clock.xml is not valid</string>
    <string name="err_read_error">Error reading file or file is not a zip file</string>
    <string name="err_missing_file">A replaced file is not present in the zip</string>
    <string name="err_import">Import error</string>

    <string name="enable_second_support">Enable seconds support</string>
    <string name="enable_date_support">Enable date support</string>
    <string name="force_watchface_date_gravity">Force the watchface\'s date gravity</string>
    <string name="force_date_background">Force the date\'s background color</string>
    <string name="settings">Settings</string>
    <string name="download">Download more</string>
    <string name="credits">Credits</string>
    <string name="text_color">Text Color</string>
    <string name="background_color">Background color</string>
    <string name="choose_color">Choose color</string>
    <string name="save">Save</string>
    <string name="credit_text">
        <![CDATA[
        <a href="https://github.com/BigBoot">BigBoot</a> has created the original <a href="https://github.com/BigBoot/qcthemer">QCThemer</a> for G3.
        He deserves all the credit for the app and the website.<br />
        I (<a href="http://apps.sternberg.ws">Yoav Sternberg</a>) redesigned the application and ported it G4.
        ]]>
    </string>

    <string-array name="gravities">
        <item>default</item>
        <item>right</item>
        <item>left</item>
        <item>top</item>
        <item>bottom</item>
    </string-array>

    <string name="banner_ad_unit_id">ca-app-pub-3328409722635254/7789878122</string>
</resources>
