<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="RtlHardcoded">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorPrimary"
                android:gravity="bottom"
                android:minHeight="?android:attr/actionBarSize"
                app:navigationIcon="@drawable/ic_settings"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:titleMarginBottom="16dp"/>

            <TextView
                android:id="@+id/extendedTitle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/toolbar"
                android:background="?android:colorPrimary"
                android:gravity="bottom"
                android:paddingBottom="16dp"
                android:paddingEnd="72dp"
                android:paddingStart="56dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@android:color/white"/>

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="800px"
                android:layout_height="800px"
                android:layout_below="@+id/extendedTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                tools:ignore="PxUsage"/>

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pager"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:focusableInTouchMode="false"
                app:fillColor="?android:colorAccent"
                app:pageColor="?android:colorPrimary"
                app:strokeColor="#FF000000"
                app:strokeWidth="0dp"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/indicator"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:ignore="PrivateResource"
                tools:text="Title"/>

            <TextView
                android:id="@+id/authorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/title"
                android:layout_marginStart="16dp"
                android:text="@string/author"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                tools:ignore="PrivateResource"/>

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/authorLabel"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="6dp"
                android:layout_toRightOf="@+id/authorLabel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="Yoav Sternberg"/>

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/authorLabel"
                android:layout_marginStart="16dp"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/descriptionLabel"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="6dp"
                android:layout_toRightOf="@+id/descriptionLabel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="A tools text to fit here"/>

            <TextView
                android:id="@+id/applied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_centerHorizontal="true"
                android:text="@string/active_theme"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                android:visibility="gone"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/adView"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_done"
                app:elevation="4dp"/>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:adSize="BANNER"
                app:adUnitId="@string/banner_ad_unit_id"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/emptyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/no_watchfaces"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/settings"
            android:textAppearance="@android:style/TextAppearance.Material.Title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_second_support"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

        <Switch
            android:id="@+id/secondsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_date_support"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

        <Switch
            android:id="@+id/dateSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/force_watchface_date_gravity"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

        <Spinner
            android:id="@+id/gravitySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/gravities"/>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>